auth: code refactoring
